--- a/src/Components/Vacation/Vacation.css
+++ b/src/Components/Vacation/Vacation.css
@@ -1,7 +1,8 @@
 .vacay_section {
-    margin: 10rem 0 5rem;
+    margin: 5rem 0 5rem;
     padding: 1rem 5%;
     line-height: 1.5;
+    display: block;
 }
 
 .vacay_header {
